Append: data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityView.html

--- a/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityView.html
+++ b/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityView.html
@@ -10,7 +10,7 @@
 <!-- 1) Button click → run the SPARQL UPDATE -->
 <mp-event-proxy
   on-event-source="recomputeAndValidate"
-  on-event-type="click"
+  on-event-type="_click"
   proxy-event-type="SemanticUpdate.Execute"
   proxy-targets='["update-archived-helpers"]'>
 </mp-event-proxy>
