--- a/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityView.html
+++ b/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityView.html
@@ -18,7 +18,7 @@
   id="update-archived-helpers"
   show-confirmation="false"
   redirect="event"
-  update="
+  query="
 PREFIX owl:  <http://www.w3.org/2002/07/owl#>
 PREFIX bibo: <http://purl.org/ontology/bibo/>
 PREFIX pso:  <http://purl.org/spar/pso/>
