Append: data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityViewApp.html

--- a/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityViewApp.html
+++ b/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fresource%2FQualityViewApp.html
@@ -1,6 +1,6 @@
 <section class="card">
   <h3>Refresh archived-import markers</h3>
-  <p>For the ontology: <code>(page-urlParam "iri")</code></p>
+  <p>For the ontology: <code>{{(page-urlParam "iri")}}</code></p>
 
   <semantic-update
     show-confirmation="true"
