Append: data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fontologies%2Fplatform%23AssetSubjectTemplateUserOverrides.html

--- a/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fontologies%2Fplatform%23AssetSubjectTemplateUserOverrides.html
+++ b/data/templates/http%3A%2F%2Fwww.metaphacts.com%2Fontologies%2Fplatform%23AssetSubjectTemplateUserOverrides.html
@@ -303,7 +303,7 @@
     "title": {"type": "string"},
     "version": {"type": "string"}
   }'
->{{baseIri}}{{title}}</template-fragment>
+>{{baseIri}}{{title}}{{version}}</template-fragment>
 
 
 [[!--
